--- a/src/dexih.connections.db2/dexih.connections.db2.csproj
+++ b/src/dexih.connections.db2/dexih.connections.db2.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -9,7 +9,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="IBM.Data.DB2.Core-osx" Version="1.2.2.100" />
+      <PackageReference Include="IBM.Data.DB2.Core-osx" Version="1.3.0.100" />
     </ItemGroup>
 
 </Project>
