--- a/test/dexih.connections.test/dexih.connections.test.csproj
+++ b/test/dexih.connections.test/dexih.connections.test.csproj
@@ -36,4 +36,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <None Update="Data\transactions.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
