--- a/src/dexih.functions.financial/dexih.functions.financial.csproj
+++ b/src/dexih.functions.financial/dexih.functions.financial.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp2.1</TargetFramework>
+        <TargetFramework>netcoreapp2.2</TargetFramework>
         <LangVersion>7.3</LangVersion>
     </PropertyGroup>
 
