--- a/src/dexih.functions/dexih.functions.csproj
+++ b/src/dexih.functions/dexih.functions.csproj
@@ -25,7 +25,6 @@
   </ItemGroup>-->
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="12.1.2" />
-    <PackageReference Include="Dexih.Utils.CopyProperties" Version="0.1.73" />
     <PackageReference Include="Dexih.Utils.Crypto" Version="0.1.11" />
     <PackageReference Include="Dexih.Utils.DataType" Version="0.1.70" />
     <PackageReference Include="System.Collections.NonGeneric" Version="4.3.0">
@@ -45,6 +44,9 @@
     </PackageReference>
     <PackageReference Include="Dexih.Utils.MessageHelpers" Version="0.1.8" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Dexih.Utils.CopyProperties\src\Dexih.Utils.CopyProperties\Dexih.Utils.CopyProperties.csproj" />
   </ItemGroup>
   <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <OutputType>Library</OutputType>
