--- a/src/dexih.functions.ml/dexih.functions.ml.csproj
+++ b/src/dexih.functions.ml/dexih.functions.ml.csproj
@@ -5,7 +5,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.ML" Version="0.9.0" />
+      <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.0.0" />
+      <PackageReference Include="Microsoft.ML" Version="1.0.0-preview" />
+      <PackageReference Include="Microsoft.ML.FastTree" Version="1.0.0-preview" />
     </ItemGroup>
 
     <ItemGroup>
