--- a/src/dexih.functions.ml/dexih.functions.ml.csproj
+++ b/src/dexih.functions.ml/dexih.functions.ml.csproj
@@ -6,8 +6,8 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.0.0" />
-      <PackageReference Include="Microsoft.ML" Version="1.0.0-preview" />
-      <PackageReference Include="Microsoft.ML.FastTree" Version="1.0.0-preview" />
+      <PackageReference Include="Microsoft.ML" Version="1.0.0" />
+      <PackageReference Include="Microsoft.ML.FastTree" Version="1.0.0" />
     </ItemGroup>
 
     <ItemGroup>
