--- a/src/dexih.functions.ml/dexih.functions.ml.csproj
+++ b/src/dexih.functions.ml/dexih.functions.ml.csproj
@@ -5,11 +5,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.0.0" />
+      <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.1.0" />
       <PackageReference Include="Microsoft.ML" Version="1.0.0" />
       <PackageReference Include="Microsoft.ML.FastTree" Version="1.0.0" />
+        <PackageReference Include="Microsoft.ML.AutoML" Version="0.3.0" />
+        <PackageReference Include="Microsoft.ML.LightGbm" Version="1.0.0" />
+        <PackageReference Include="Microsoft.ML.Mkl.Components" Version="1.0.0" />
+        <PackageReference Include="Microsoft.ML.Recommender" Version="0.12.0" />
     </ItemGroup>
-
     <ItemGroup>
         <ProjectReference Include="..\dexih.functions\dexih.functions.csproj" />
     </ItemGroup>
