--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-version: '0.2.{build}'
+version: '1.1.{build}'
 image: Visual Studio 2017
 configuration:
 - Debug
@@ -81,7 +81,8 @@ for:
   build_script:
   - appveyor-retry dotnet restore -v Minimal
   - dotnet build -c %CONFIGURATION%
-  - dotnet pack -c %CONFIGURATION% --no-build -o ../../artifacts
+  # - dotnet pack -c %CONFIGURATION% --no-build -o ../../artifacts
+  - dotnet pack -c %CONFIGURATION% --no-build /p:Version=%APPVEYOR_BUILD_VERSION% -o ../../artifacts
   - del .\artifacts\*test*
   - del .\artifacts\*Example*
   
