--- a/src/dexih.functions/dexih.functions.csproj
+++ b/src/dexih.functions/dexih.functions.csproj
@@ -27,7 +27,8 @@
     <PackageReference Include="CsvHelper" Version="12.1.2" />
     <PackageReference Include="Dexih.Utils.CopyProperties" Version="0.1.80" />
     <PackageReference Include="Dexih.Utils.Crypto" Version="0.1.14" />
-    <PackageReference Include="Dexih.Utils.DataType" Version="0.1.86" />
+    <PackageReference Include="Dexih.Utils.DataType" Version="0.1.90" />
+    <PackageReference Include="protobuf-net" Version="2.4.0" />
     <PackageReference Include="System.Collections.NonGeneric" Version="4.3.0">
     </PackageReference>
     <PackageReference Include="System.Data.Common" Version="4.3.0">
