--- a/src/dexih.transforms/dexih.transforms.csproj
+++ b/src/dexih.transforms/dexih.transforms.csproj
@@ -19,6 +19,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="protobuf-net" Version="2.4.0" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\dexih.functions\dexih.functions.csproj">
     </ProjectReference>
   </ItemGroup>
