--- a/src/dexih.functions/dexih.functions.csproj
+++ b/src/dexih.functions/dexih.functions.csproj
@@ -27,7 +27,6 @@
     <PackageReference Include="CsvHelper" Version="12.1.2" />
     <PackageReference Include="Dexih.Utils.CopyProperties" Version="0.1.80" />
     <PackageReference Include="Dexih.Utils.Crypto" Version="0.1.16" />
-    <PackageReference Include="Dexih.Utils.DataType" Version="0.1.104" />
     <PackageReference Include="MessagePack" Version="1.7.3.7" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="System.Collections.NonGeneric" Version="4.3.0">
@@ -45,6 +44,9 @@
     <PackageReference Include="System.Xml.XPath.XDocument" Version="4.3.0">
     </PackageReference>
     <PackageReference Include="Dexih.Utils.MessageHelpers" Version="0.1.16" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\dexih.utils.datatype\src\Dexih.Utils.DataType\Dexih.Utils.DataType.csproj" />
   </ItemGroup>
   <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <OutputType>Library</OutputType>
