--- a/src/dexih.functions/dexih.functions.csproj
+++ b/src/dexih.functions/dexih.functions.csproj
@@ -15,7 +15,7 @@
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
-    <LangVersion>7.1</LangVersion>
+    <LangVersion>latest</LangVersion>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <!--<ItemGroup>
@@ -25,7 +25,7 @@
   </ItemGroup>-->
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="12.1.2" />
-    <PackageReference Include="Dexih.Utils.CopyProperties" Version="0.1.80" />
+    <PackageReference Include="Dexih.Utils.CopyProperties" Version="0.1.90" />
     <PackageReference Include="Dexih.Utils.Crypto" Version="0.1.16" />
     <PackageReference Include="Dexih.Utils.DataType" Version="0.1.119" />
     <PackageReference Include="MessagePack" Version="1.8.74" />
